--- a/index.html
+++ b/index.html
@@ -141,21 +141,21 @@
                         <img src="img/sc4-img-2.png" class="img-responsive tm-media-img">
                         <div class="media-body tm-box-5">
                             <h2>Beisbol</h2>
-                            <p class="mb-0">Maecenas tempor nibh sed rhoncus ullamcorper. Ut porttitor ante non accumsan pretium. Maecenas iaculis arcu sed porta accumsan.</p>
+                            <p class="mb-0">El béisbol es una parte importante de la oferta deportiva en el Oratorio Don Bosco de Jarabacoa, brindando a los jóvenes la oportunidad de aprender habilidades deportivas mientras desarrollan valores como la disciplina y la perseverancia.</p>
                         </div>
                     </div>
                     <div class="media tm-media">
                         <img src="img/sc4-img-3.png" class="img-responsive tm-media-img">
                         <div class="media-body tm-box-5">
                             <h2>Basket</h2>
-                            <p class="mb-0">Suspendisse iaculis leo libero, ut congue augue feugiat eu. Nulla faucibus non odio sed auctor. Vestibulum a tincidunt dolor, eget eleifend lacus.</p>
+                            <p class="mb-0">El baloncesto ofrece a los jóvenes una forma emocionante de mantenerse activos y aprender habilidades deportivas, al tiempo que promueve valores como el trabajo en equipo y el compromiso.</p>
                         </div>
                     </div>
                     <div class="media tm-media">
                         <img src="img/sc4-img-4.png" class="img-responsive tm-media-img">
                         <div class="media-body tm-box-5">
                             <h2>Futbol</h2>
-                            <p class="mb-0"> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. </p>
+                            <p class="mb-0">En el Oratorio Don Bosco de Jarabacoa, el fútbol es una actividad clave que promueve la integración y el trabajo en equipo entre los jóvenes, fomentando valores como la camaradería y el esfuerzo.</p>
                         </div>
                     </div>
                 </div>
